--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -11,11 +11,11 @@ body {
 }
 .display-2 {
   font-family: 'Poppins', sans-serif;
-  font-size: 2.2rem;
+  font-size: 2rem;
   line-height: 1.1;
 }
 .display-2 > .mbr-iconfont {
-  font-size: 2.75rem;
+  font-size: 2.5rem;
 }
 .display-4 {
   font-family: 'Poppins', sans-serif;
@@ -58,9 +58,9 @@ body {
     line-height: calc( 1.1 * (1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
-    font-size: 1.76rem;
-    font-size: calc( 1.42rem + (2.2 - 1.42) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.3 * (1.42rem + (2.2 - 1.42) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.6rem;
+    font-size: calc( 1.35rem + (2 - 1.35) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.3 * (1.35rem + (2 - 1.35) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
     font-size: 0.64rem;
@@ -1238,7 +1238,7 @@ button {
 .cid-tjPrC1Orb7 {
   padding-top: 8rem;
   padding-bottom: 5rem;
-  background-color: #ffffff;
+  background-image: url("../../../assets/images/4-1410x1182.png");
 }
 .cid-tjPrC1Orb7 .row {
   align-items: center;
@@ -2029,9 +2029,37 @@ button {
 .cid-sWrP7vWh7v .copyright > p {
   color: #eff0f6;
 }
+.cid-tjU7f5ZWuF {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-tjU7f5ZWuF img {
+  width: 100%;
+  border-radius: 15px;
+}
+.cid-tjTVmImB5z {
+  padding-top: 4rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-tjTVmImB5z .section-head {
+  margin-bottom: 2.3rem;
+}
+@media (max-width: 991px) {
+  .cid-tjTVmImB5z .row {
+    text-align: center;
+  }
+}
+.cid-tjTVmImB5z .mbr-section-title {
+  text-align: center;
+}
+.cid-tjTVmImB5z .mbr-text {
+  text-align: center;
+}
 .cid-tjSWCQY7yN {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+  padding-top: 0rem;
+  padding-bottom: 3rem;
   background-color: #ffffff;
 }
 .cid-tjSWCQY7yN .mbr-section-title {
@@ -2236,6 +2264,31 @@ button {
 #custom-html-3p p {
   font-size: 60px;
   color: #777;
+}
+.cid-tjU9Z5pnp2 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #ffffff;
+}
+.cid-tjU9Z5pnp2 .mbr-section-subtitle {
+  color: #8c8c95;
+  text-align: center;
+  max-width: 552px;
+  margin: auto;
+}
+.cid-tjU9Z5pnp2 .mbr-section-title {
+  text-align: center;
+  color: #14142b;
+  padding-bottom: 24px;
+  max-width: 752px;
+  margin: auto;
+}
+.cid-tjU9Z5pnp2 .row {
+  align-items: center;
+  height: 100%;
+}
+.cid-tjU9Z5pnp2 .wrapper {
+  margin: auto;
 }
 .cid-tjT2nNuQV2 {
   padding-top: 6rem;
