--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2199,7 +2199,7 @@ button {
   color: #f7f7f7;
 }
 .cid-tjT16Eyf3E {
-  padding-top: 3rem;
+  padding-top: 2rem;
   padding-bottom: 0rem;
   background-color: #ffffff;
 }
@@ -2223,15 +2223,27 @@ button {
 .cid-tjT16Eyf3E .wrapper {
   margin: auto;
 }
-#custom-html-3p {
+#custom-html-4m {
   /* Type valid CSS here */
 }
-#custom-html-3p div {
+#custom-html-4m div {
   padding: 80px 0;
   color: #777;
   text-align: center;
 }
-#custom-html-3p p {
+#custom-html-4m p {
+  font-size: 60px;
+  color: #777;
+}
+#custom-html-4n {
+  /* Type valid CSS here */
+}
+#custom-html-4n div {
+  padding: 80px 0;
+  color: #777;
+  text-align: center;
+}
+#custom-html-4n p {
   font-size: 60px;
   color: #777;
 }
