create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5286,3 +5286,567 @@ button {
   -webkit-align-items: center;
   align-items: center;
 }
+.cid-tk6bgCcK3y {
+  padding-top: 7rem;
+  padding-bottom: 4rem;
+  background-image: url("../../../assets/images/4-1410x1182.png");
+}
+.cid-tk6bgCcK3y .mbr-section-title {
+  margin-bottom: 24px;
+  line-height: 1.171em;
+  color: #14142b;
+  display: inline-block;
+}
+.cid-tk6bgCcK3y .mbr-text {
+  color: #8c8c95;
+  margin-bottom: 26px;
+  text-align: center;
+  max-width: 739px;
+  margin: auto;
+}
+.cid-tk6bgCcK3y .button-align {
+  text-align: center;
+}
+.cid-tk6bgCcK3y .margin {
+  margin-right: 14px;
+}
+.cid-tk6bgCcK3y .mbr-section-btn {
+  display: block;
+}
+@media (max-width: 440px) {
+  .cid-tk6bgCcK3y .margin {
+    margin-right: 0px;
+  }
+  .cid-tk6bgCcK3y .b {
+    margin-bottom: 20px;
+  }
+}
+.cid-tk6bgCcK3y .btn {
+  margin-top: 20px;
+}
+.cid-tk6bgCcK3y a.btn > span {
+  margin-left: 0.5rem;
+}
+.cid-tk6bgCcK3y .mbr-text,
+.cid-tk6bgCcK3y .button-align {
+  color: #5f5d68;
+}
+.cid-tk6a7e4VEG {
+  z-index: 1000;
+  width: 100%;
+  position: relative;
+  min-height: 60px;
+}
+.cid-tk6a7e4VEG nav.navbar {
+  position: fixed;
+}
+.cid-tk6a7e4VEG .dropdown-item:before {
+  font-family: Moririse2 !important;
+  content: "\e966";
+  display: inline-block;
+  width: 0;
+  position: absolute;
+  left: 1rem;
+  top: 0.5rem;
+  margin-right: 0.5rem;
+  line-height: 1;
+  font-size: inherit;
+  vertical-align: middle;
+  text-align: center;
+  overflow: hidden;
+  transform: scale(0, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-tk6a7e4VEG .dropdown-menu {
+  padding: 0;
+  border-radius: 0;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+  margin-top: 0px;
+}
+.cid-tk6a7e4VEG .dropdown-item:hover,
+.cid-tk6a7e4VEG .dropdown-item:focus {
+  color: #fedb01 !important;
+}
+.cid-tk6a7e4VEG .nav-dropdown .link {
+  padding: 0 0em !important;
+  font-weight: 400;
+}
+.cid-tk6a7e4VEG .nav-dropdown .link.dropdown-toggle::after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+}
+.cid-tk6a7e4VEG .nav-link {
+  position: relative;
+  padding: 0;
+}
+.cid-tk6a7e4VEG .container {
+  display: flex;
+  margin: auto;
+}
+.cid-tk6a7e4VEG .iconfont-wrapper {
+  font-size: 1.5rem;
+  padding-right: 0.5rem;
+}
+.cid-tk6a7e4VEG .dropdown-menu,
+.cid-tk6a7e4VEG .navbar.opened {
+  background: #000000 !important;
+}
+.cid-tk6a7e4VEG .nav-item:focus,
+.cid-tk6a7e4VEG .nav-link:focus {
+  outline: none;
+}
+.cid-tk6a7e4VEG .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  transition: all 0.25s ease-in-out;
+}
+.cid-tk6a7e4VEG .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-tk6a7e4VEG .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
+  margin-right: 0.5rem;
+  vertical-align: sub;
+}
+.cid-tk6a7e4VEG .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
+  display: inline-block;
+  transform: scale(1, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-tk6a7e4VEG .collapsed .dropdown-menu .dropdown-item:before {
+  display: none;
+}
+.cid-tk6a7e4VEG .collapsed .dropdown .dropdown-menu .dropdown-item {
+  padding: 0.235em 1.5em 0.235em 1.5em !important;
+  transition: none;
+  margin: 0 !important;
+}
+.cid-tk6a7e4VEG .navbar {
+  min-height: 70px;
+  transition: all 0.3s;
+  border-bottom: 1px solid transparent;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+  background: #000000;
+}
+.cid-tk6a7e4VEG .navbar.opened {
+  transition: all 0.3s;
+}
+.cid-tk6a7e4VEG .navbar .dropdown-item {
+  padding: 0.5rem 1.8rem;
+}
+.cid-tk6a7e4VEG .navbar .navbar-logo img {
+  width: auto;
+}
+.cid-tk6a7e4VEG .navbar .navbar-collapse {
+  justify-content: flex-end;
+  z-index: 1;
+}
+.cid-tk6a7e4VEG .navbar.collapsed {
+  justify-content: center;
+}
+.cid-tk6a7e4VEG .navbar.collapsed .nav-item .nav-link::before {
+  display: none;
+}
+.cid-tk6a7e4VEG .navbar.collapsed.opened .dropdown-menu {
+  top: 0;
+}
+@media (min-width: 992px) {
+  .cid-tk6a7e4VEG .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3rem);
+  }
+}
+.cid-tk6a7e4VEG .navbar.collapsed .dropdown-menu .dropdown-submenu {
+  left: 0 !important;
+}
+.cid-tk6a7e4VEG .navbar.collapsed .dropdown-menu .dropdown-item:after {
+  right: auto;
+}
+.cid-tk6a7e4VEG .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+  border-top: 0.35em solid;
+  border-right: 0.35em solid transparent;
+  border-left: 0.35em solid transparent;
+  border-bottom: 0;
+  top: 41%;
+}
+.cid-tk6a7e4VEG .navbar.collapsed ul.navbar-nav li {
+  margin: auto;
+}
+.cid-tk6a7e4VEG .navbar.collapsed .dropdown-menu .dropdown-item {
+  padding: 0.25rem 1.5rem;
+  text-align: center;
+}
+.cid-tk6a7e4VEG .navbar.collapsed .icons-menu {
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+@media (max-width: 991px) {
+  .cid-tk6a7e4VEG .navbar .nav-item .nav-link::before {
+    display: none;
+  }
+  .cid-tk6a7e4VEG .navbar.opened .dropdown-menu {
+    top: 0;
+  }
+  .cid-tk6a7e4VEG .navbar .dropdown-menu .dropdown-submenu {
+    left: 0 !important;
+  }
+  .cid-tk6a7e4VEG .navbar .dropdown-menu .dropdown-item:after {
+    right: auto;
+  }
+  .cid-tk6a7e4VEG .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+    margin-left: 0.5rem;
+    margin-top: 0.2rem;
+    border-top: 0.35em solid;
+    border-right: 0.35em solid transparent;
+    border-left: 0.35em solid transparent;
+    border-bottom: 0;
+    top: 40%;
+  }
+  .cid-tk6a7e4VEG .navbar .navbar-logo img {
+    height: 3rem !important;
+  }
+  .cid-tk6a7e4VEG .navbar ul.navbar-nav li {
+    margin: auto;
+  }
+  .cid-tk6a7e4VEG .navbar .dropdown-menu .dropdown-item {
+    padding: 0.25rem 1.5rem !important;
+    text-align: center;
+  }
+  .cid-tk6a7e4VEG .navbar .navbar-brand {
+    flex-shrink: initial;
+    flex-basis: auto;
+    word-break: break-word;
+    padding-right: 2rem;
+  }
+  .cid-tk6a7e4VEG .navbar .navbar-toggler {
+    flex-basis: auto;
+  }
+  .cid-tk6a7e4VEG .navbar .icons-menu {
+    padding-left: 0;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+}
+.cid-tk6a7e4VEG .navbar.navbar-short {
+  min-height: 60px;
+}
+.cid-tk6a7e4VEG .navbar.navbar-short .navbar-logo img {
+  height: 2.5rem !important;
+}
+.cid-tk6a7e4VEG .navbar.navbar-short .navbar-brand {
+  min-height: 60px;
+  padding: 0;
+}
+.cid-tk6a7e4VEG .navbar-brand {
+  min-height: 70px;
+  flex-shrink: 0;
+  align-items: center;
+  margin-right: 0;
+  padding: 10px 0;
+  transition: all 0.3s;
+  word-break: break-word;
+  z-index: 1;
+}
+.cid-tk6a7e4VEG .navbar-brand .navbar-caption {
+  line-height: inherit !important;
+}
+.cid-tk6a7e4VEG .navbar-brand .navbar-logo a {
+  outline: none;
+}
+.cid-tk6a7e4VEG .dropdown-item.active,
+.cid-tk6a7e4VEG .dropdown-item:active {
+  background-color: transparent;
+}
+.cid-tk6a7e4VEG .navbar-expand-lg .navbar-nav .nav-link {
+  padding: 0;
+}
+.cid-tk6a7e4VEG .nav-dropdown .link.dropdown-toggle {
+  margin-right: 1.667em;
+}
+.cid-tk6a7e4VEG .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
+  margin-right: 0;
+  padding: 0.667em 1.667em;
+}
+.cid-tk6a7e4VEG .navbar.navbar-expand-lg .dropdown .dropdown-menu {
+  background: #000000;
+}
+.cid-tk6a7e4VEG .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+  left: 100%;
+}
+.cid-tk6a7e4VEG .navbar .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-tk6a7e4VEG ul.navbar-nav {
+  flex-wrap: wrap;
+  padding-left: 20px;
+}
+.cid-tk6a7e4VEG .navbar-buttons {
+  text-align: center;
+  min-width: 170px;
+}
+.cid-tk6a7e4VEG button.navbar-toggler {
+  outline: none;
+  width: 31px;
+  height: 20px;
+  cursor: pointer;
+  transition: all 0.2s;
+  position: relative;
+  align-self: center;
+}
+.cid-tk6a7e4VEG button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #f7f7f7;
+}
+.cid-tk6a7e4VEG button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all 0.2s;
+}
+.cid-tk6a7e4VEG button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-tk6a7e4VEG button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-tk6a7e4VEG button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all 0.2s;
+}
+.cid-tk6a7e4VEG nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-tk6a7e4VEG nav.opened .hamburger span:nth-child(2) {
+  transform: rotate(45deg);
+  transition: all 0.25s;
+}
+.cid-tk6a7e4VEG nav.opened .hamburger span:nth-child(3) {
+  transform: rotate(-45deg);
+  transition: all 0.25s;
+}
+.cid-tk6a7e4VEG nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-tk6a7e4VEG .navbar-dropdown {
+  padding: 19px 1rem;
+  position: fixed;
+}
+.cid-tk6a7e4VEG a.nav-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cid-tk6a7e4VEG .icons-menu {
+  flex-wrap: nowrap;
+  display: flex;
+  justify-content: flex-end;
+  padding-left: 1rem;
+  padding-top: 0.3rem;
+  text-align: center;
+  min-width: 340px !important;
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-tk6a7e4VEG .navbar {
+    height: 70px;
+  }
+  .cid-tk6a7e4VEG .navbar.opened {
+    height: auto;
+  }
+  .cid-tk6a7e4VEG .nav-item .nav-link:hover::before {
+    width: 175%;
+    max-width: calc(100% + 2rem);
+    left: -1rem;
+  }
+}
+.cid-tk6a7e4VEG a {
+  display: inline;
+}
+.cid-tk6a7e4VEG img {
+  display: inline;
+  padding-right: 10px;
+}
+.cid-tk6a7e4VEG .dropdown-toggle:after {
+  display: none;
+}
+.cid-tk6a7e4VEG .navbar .dropdown-item {
+  display: block;
+  border-radius: 0;
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
+.cid-tk6a7e4VEG .dropdown-item:hover {
+  color: #3f69ff !important;
+}
+@media (max-width: 990px) {
+  .cid-tk6a7e4VEG .dropdown-menu {
+    margin-top: 0px;
+  }
+  .cid-tk6a7e4VEG .nav-dropdown .link {
+    margin: 0 !important;
+  }
+}
+.cid-tk6a7e4VEG .mbr-buttons {
+  margin: 20px -6px 20px;
+}
+.cid-tk6a7e4VEG .nav-item {
+  margin-right: 32px;
+}
+.cid-tk6a7e4VEG .nav-item:last-child {
+  margin-right: 0;
+}
+@media (max-width: 970px) {
+  .cid-tk6a7e4VEG ul li {
+    height: 45px;
+    display: list-item;
+  }
+}
+.cid-tk6a7e4VEG .navbar-collapse.collapsing .nav-item {
+  height: 45px;
+}
+.cid-tk6a7e4VEG .navbar-collapse.collapse.show .nav-item {
+  height: 45px;
+}
+.cid-tk6a7e4VEG .navbar-nav {
+  margin: auto;
+}
+.cid-tk6a7e4VEG .navbar-collapse.collapse.show ul li {
+  display: list-item;
+}
+.cid-tk6a7e4VEG .mbr-iconfont {
+  margin-left: -5px;
+  margin-right: 7px;
+}
+.cid-tk6a7e4VEG .btn {
+  padding: 1rem 1.5625rem !important;
+  display: inline-block;
+  line-height: 20px;
+  transform-style: preserve-3d !important;
+  transition: color 350ms ease, transform 300ms ease, border 300ms ease, background-color 300ms ease, -webkit-transform 300ms ease !important;
+}
+.cid-tk6a7e4VEG .navbar.collapsed .icons-menu {
+  display: flex;
+  flex-direction: column;
+}
+.cid-tk6a7e4VEG .navbar.collapsed .icons-menu .top {
+  margin-top: 15px;
+}
+.cid-tk6a7e4VEG .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+  border-top: 0.35em solid;
+  border-right: 0.35em solid transparent;
+  border-left: 0.35em solid transparent;
+  border-bottom: 0;
+  top: 41%;
+}
+.cid-tk6a7e4VEG .dropdown-toggle::after {
+  display: inline-block;
+  margin-left: .255em;
+  vertical-align: .255em;
+  content: "";
+  border-top: .3em solid;
+  border-right: .3em solid transparent;
+  border-bottom: 0;
+  border-left: .3em solid transparent;
+}
+.cid-tk6a7e4VEG .dropdown-item:focus {
+  color: #3f69ff !important;
+}
+@media (max-width: 945px) {
+  .cid-tk6a7e4VEG .icons-menu {
+    display: flex;
+    flex-direction: column;
+  }
+  .cid-tk6a7e4VEG .top {
+    margin-top: 25px;
+  }
+}
+.cid-tk6a7e4VEG .btn:hover {
+  transform: translate3d(0px, -4px, 0.01px) !important;
+  transition: color 350ms ease, transform 300ms ease, border 300ms ease, background-color 300ms ease, -webkit-transform 300ms ease !important;
+}
+@media (min-width: 992px) {
+  .cid-tk6a7e4VEG .container,
+  .cid-tk6a7e4VEG .container-fluid {
+    flex-wrap: nowrap;
+  }
+}
+.cid-tk6a7e4VEG li:last-child {
+  margin-right: 0;
+}
+@media (max-width: 989px) {
+  .cid-tk6a7e4VEG ul.navbar-nav {
+    padding-left: 0;
+  }
+}
+@media (max-width: 430px) {
+  .cid-tk6a7e4VEG .icons-menu {
+    min-width: initial !important;
+  }
+  .cid-tk6a7e4VEG a.btn {
+    margin-top: 10px;
+  }
+}
+.cid-tk6a7e4VEG a.btn > span {
+  margin-left: 0.5rem;
+}
+.cid-tk6a7ezVsQ {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #000000;
+}
+.cid-tk6a7ezVsQ p {
+  text-align: center;
+}
+.cid-tk6a7ezVsQ .mbr-iconfont-social {
+  font-size: 1rem;
+  color: #f7f7f7;
+}
+.cid-tk6a7ezVsQ .social-list a:focus {
+  text-decoration: none;
+}
+.cid-tk6a7ezVsQ .text-copyright {
+  width: 100%;
+  color: #ffffff;
+}
+.cid-tk6a7ezVsQ .img-logo-footer {
+  margin-right: 1rem;
+  max-width: 3rem;
+}
+.cid-tk6a7ezVsQ .text-logo-footer {
+  display: inline-block;
+  vertical-align: middle;
+}
+.cid-tk6a7ezVsQ .logo-footer {
+  line-height: normal;
+}
+.cid-tk6a7ezVsQ .copyright {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-tk6a7ezVsQ .social-btns {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-tk6a7ezVsQ .media-container-row {
+  -webkit-align-items: center;
+  align-items: center;
+}
